--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(get_venus_metadata)
 export(rad_to_refl)
 export(refl_to_rad)
 export(sixs_params)
-export(toa_to_boa)
+export(toa_rad_to_boa_refl)
+import(stars)
