--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,11 @@ Depends:
     stars
 Imports: 
     RSelenium
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Encoding: UTF-8
 Suggests: 
     tinytest,
-    XML
+    XML,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
